--- a/backend/package.json
+++ b/backend/package.json
@@ -1,4 +1,6 @@
 {
+  "name": "backend",
+  "version": "1.0.0",
   "dependencies": {
     "@nestjs/common": "^11.1.6",
     "@nestjs/config": "^4.0.2",
@@ -13,6 +15,16 @@
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "pg": "^8.16.3",
-    "typeorm": "^0.3.26"
+    "typeorm": "^0.3.26",
+    "typescript": "^5.9.2"
+  },
+  "devDependencies": {
+    "@types/bcrypt": "^6.0.0",
+    "ts-node-dev": "^2.0.0"
+  },
+  "scripts": {
+    "start": "node dist/main.js",
+    "start:dev": "ts-node-dev --respawn --transpile-only src/main.ts",
+    "build": "tsc"
   }
 }
